fix: element position change according to scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -91,6 +91,11 @@ textarea {
   @apply text-black;
 }
 
+body {
+  @apply w-screen;
+  @apply overflow-x-hidden;
+}
+
 .disable-scrolling {
   @apply h-full;
   @apply overflow-hidden;
